--- a/intro.ipynb
+++ b/intro.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "intro.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMMwfjZwFGa/3HD+mdHshgJ",
+      "authorship_tag": "ABX9TyM59J1KqYuBP4exHFQ9sR3x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,18 +33,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "RBPgEx30W75V",
-        "outputId": "a1f9c615-8e0b-485d-9158-87f0f67be1a5"
+        "id": "rET7ViVujtfQ",
+        "outputId": "0abaa136-46f2-4baf-9add-6798a78f4517"
       },
       "source": [
-        "print(\"hello world\")\n"
+        "print(\"Hello World\")"
       ],
       "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "hello world\n"
+            "Hello World\n"
           ],
           "name": "stdout"
         }
